--- a/docfx_project/home/toc.yml
+++ b/docfx_project/home/toc.yml
@@ -24,6 +24,8 @@
      href: ./techguides/t24-development.md
    - name: Use Jenkins to Build Pipelines
      href: ./techguides/jenkins-build-promote-pipelines.md
+   - name: FCM Configuration
+     href: ./techguides/fcm-configuration.md  
 - name: Troubleshooting
   href: ./techguides/troubleshooting.md
 - name: Getting Support
