--- a/manifest.json
+++ b/manifest.json
@@ -359,6 +359,18 @@
       "version": ""
     },
     {
+      "type": "Conceptual",
+      "source_relative_path": "home/techguides/fcm-configuration.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/techguides/fcm-configuration.html",
+          "hash": "K+rRNIZu2nn+8I4u5dRq1Q=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
       "type": "Resource",
       "source_relative_path": "home/techguides/images/abn-package.png",
       "output": {
@@ -1057,6 +1069,105 @@
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/extract_data_dbtools_2.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/fcm-check-messages.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/fcm-check-messages.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/fcm-create-environment.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/fcm-create-environment.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/fcm-drag-message.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/fcm-drag-message.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/fcm-endpoints.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/fcm-endpoints.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/fcm-environment-fields.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/fcm-environment-fields.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/fcm-sftp-auth.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/fcm-sftp-auth.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/fcm-sftp-fields.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/fcm-sftp-fields.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/fcm-sftp-id.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/fcm-sftp-id.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/fcm-show-template.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/fcm-show-template.png"
         }
       },
       "is_incremental": false,
@@ -2538,7 +2649,7 @@
       "output": {
         ".html": {
           "relative_path": "home/toc.html",
-          "hash": "rHuX7oqnLu5S0SxQzTl3qA=="
+          "hash": "LjzLlQGTGOmWex6HWfmWow=="
         }
       },
       "is_incremental": false,
@@ -2612,14 +2723,19 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "RestApiDocumentProcessor": {
+        "ResourceDocumentProcessor": {
           "can_incremental": false,
-          "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "TocDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "RestApiDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
@@ -2628,11 +2744,6 @@
         },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
-          "incrementalPhase": "build"
-        },
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         }
       }
