--- a/docfx_project/home/toc.yml
+++ b/docfx_project/home/toc.yml
@@ -24,6 +24,8 @@
      href: ./techguides/t24-development.md
    - name: Use Jenkins to Build Pipelines
      href: ./techguides/jenkins-build-promote-pipelines.md
+   - name: Clone an Environment
+     href: ./techguides/clone-environment.md
    - name: Access UD Directories
      href: ./techguides/access-ud-directories.md
    - name: Configure and Use FCM Application
